--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,8 @@
     install:
      - composer install
      - cp .env.example .env
+     - php artisan key:generate
+     - cp app/config/parameters.yml.dist app/config/parameters.yml
      - php bin/console doctrine:database:create --env=test
      - php bin/console doctrine:schema:create --env=test
      - php bin/console doctrine:fixtures:load -n --env=test
