--- a/.travis.yml
+++ b/.travis.yml
@@ -42,8 +42,6 @@
      # Fast finish allows to set the build as "finished" even if the "allow_failures" matrix elements are not finished yet.
      fast_finish: true
      include:
-       - php: 5.5
-       - php: 5.6
        - php: 7.2
        - php: hhvm
      allow_failures:
@@ -59,6 +57,7 @@
     install:
      - composer install
      - cp .env.example .env
+     - php artisan key:generate
      - php bin/console doctrine:database:create --env=test
      - php bin/console doctrine:schema:create --env=test
      - php bin/console doctrine:fixtures:load -n --env=test
