Yml file modification

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,8 +34,7 @@
     script:
      - phpunit
     deploy:
-    - git checkout -b production
-    - git push origin production
+     skip_cleanup: true
     # After a build, send email notification with the build results
     notifications:
      email: dhaval.joshi@viitor.cloud
