Yml file modification

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,13 @@
     script:
      - phpunit
     deploy:
-     skip_cleanup: true
+     provider: s3
+       access_key_id: "AKIAXTC7R6IMR7PYMKGS"
+       secret_access_key: "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"
+       bucket: "jenkins-vcloud"
+       skip_cleanup: true
+       on:
+         branch: master
     # After a build, send email notification with the build results
     notifications:
      email: dhaval.joshi@viitor.cloud
