--- a/.travis.yml
+++ b/.travis.yml
@@ -33,17 +33,28 @@
     # Run script
     script:
      - phpunit
+     - zip -r latest *
+     - mkdir -p dpl_cd_upload
+     - mv latest.zip dpl_cd_upload/latest.zip
     deploy:
-        provider: codedeploy
-        access_key_id: "AKIAXTC7R6IMR7PYMKGS"
-        secret_access_key: "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"
-        bucket: "jenkins-vcloud"
-        key: latest/MyApp.zip
-        bundle_type: zip
-        application: MyApp
-        deployment_group: MyDeploymentGroup
+        - provider: s3
+          access_key_id: "AKIAXTC7R6IMR7PYMKGS"
+          secret_access_key: "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"
+          local_dir: dpl_cd_upload
+          skip_cleanup: true
+          bucket: jenkins-vcloud
+          region: ap-south-1
+        - provider: codedeploy
+          access_key_id: "AKIAXTC7R6IMR7PYMKGS"
+          secret_access_key: "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"
+          bucket: jenkins-vcloud
+          key: latest.zip
+          bundle_type: zip
+          application: jenkins-demo
+          deployment_group: jenkins-demo
+          region: ap-south-1
         on:
-          branch: production
+          branch: master
     # After a build, send email notification with the build results
     notifications:
      email: dhaval.joshi@viitor.cloud
