--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,9 @@
      - composer install
      - cp .env.example .env
      - php artisan key:generate
+     #- php bin/console doctrine:database:create --env=test
+     #- php bin/console doctrine:schema:create --env=test
+     #- php bin/console doctrine:fixtures:load -n --env=test
     # Run script
     script:
      - phpunit
