--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@
     # Create database, schema and fixtures
     install:
      - sudo apt-get update
-     - sudo apt-get update python3.6
+     - apt-get install python3.6
      - python -m pip install --upgrade pip
      - pip install coveralls
      - composer install
