--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,8 @@
     # Install composer dependencies,
     # Create database, schema and fixtures
     install:
-     - sudo add-apt-repository ppa:jonathonf/python-3.6
      - sudo apt-get update
-     - sudo apt-get install python3.6
+     - sudo apt-get install python
      - python -m pip install --upgrade pip
      - pip install coveralls
      - composer install
