--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,7 @@
     # Create database, schema and fixtures
     install:
      - sudo apt-get update
-     - sudo apt-get install python
-     - python -m pip install --upgrade pip
+     - pip install urllib3[secure]
      - pip install coveralls
      - composer install
      - cp .env.example .env
