--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@
     # Create database, schema and fixtures
     install:
      - composer install
-     - composer require satooshi/php-coveralls:~0.6@stable
+     - composer require satooshi/php-coveralls
      - cp .env.example .env
      - php artisan key:generate
      #- php bin/console doctrine:schema:create --env=test
