Atoum file added

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,8 @@
      - composer install
      - cp .env.example .env
      - php artisan key:generate
-     - php atoum.phar
-     - bin/atoum --test-all
+    after_success:
+     coveralls
      #- php bin/console doctrine:schema:create --env=test
      #- php bin/console doctrine:fixtures:load -n --env=test
      # Run script
