--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,2 +1,3 @@
+coverage_clover: tests/logs/clover.xml
+json_path: tests/logs/coveralls-upload.json
 service_name: travis-ci
-repo_token: 0BCAbyO7038xwKlJFyvaDk3tbXdNPTaUg
