--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,8 @@
      - cp .env.example .env
      - php artisan key:generate
     before_install:
-    - composer require phpunit/phpunit:4.8.* satooshi/php-coveralls:dev-master
+    - composer require phpunit/phpunit:4.8.*
+    - composer require --dev php-coveralls/php-coveralls
     - composer install --dev
     script:
     - ./vendor/bin/phpunit --coverage-clover ./tests/logs/clover.xml
