--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@
     # Install composer dependencies
     install:
      - composer install
+     - composer require --dev atoum/atoum
      - cp .env.example .env
      - php artisan key:generate
      - bin/atoum --test-all
