--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@
      - composer require --dev atoum/atoum
      - cp .env.example .env
      - php artisan key:generate
-     - bin/atoum --test-all
+     - php .atoum.php
      #- php atoum.phar --test-it
      #- php bin/console doctrine:schema:create --env=test
      #- php bin/console doctrine:fixtures:load -n --env=test
