Coveralls file modification

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,9 @@
      - composer require --dev atoum/atoum
      - cp .env.example .env
      - php artisan key:generate
+     - php atoum.phar --test-it
      - php .atoum.php
-     #- php atoum.phar --test-it
+     #
      #- php bin/console doctrine:schema:create --env=test
      #- php bin/console doctrine:fixtures:load -n --env=test
      # Run script
